--- a/.gitignore
+++ b/.gitignore
@@ -1,119 +1,3 @@
-# Miscellaneous
-relo/*.class
-relo/*.lock
-relo/*.log
-relo/*.pyc
-relo/*.swp
-relo/.buildlog/
-relo/.history
 
-
-
-# Flutter repo-specific
-relo//bin/cache/
-relo//bin/internal/bootstrap.bat
-relo//bin/internal/bootstrap.sh
-relo//bin/mingit/
-relo//dev/benchmarks/mega_gallery/
-relo//dev/bots/.recipe_deps
-relo//dev/bots/android_tools/
-relo//dev/devicelab/ABresults*.json
-relo//dev/docs/doc/
-relo//dev/docs/flutter.docs.zip
-relo//dev/docs/lib/
-relo//dev/docs/pubspec.yaml
-relo//dev/integration_tests/**/xcuserdata
-relo//dev/integration_tests/**/Pods
-relo//packages/flutter/coverage/
-relo/version
-relo/analysis_benchmark.json
-
-# packages file containing multi-root paths
-relo/.packages.generated
-
-# Flutter/Dart/Pub related
-relo/**/doc/api/
-relo/.dart_tool/
-relo/.flutter-plugins
-relo/.flutter-plugins-dependencies
-relo/**/generated_plugin_registrant.dart
-relo/.packages
-relo/.pub-preload-cache/
-relo/.pub/
-relo/build/
-relo/flutter_*.png
-relo/linked_*.ds
-relo/unlinked.ds
-relo/unlinked_spec.ds
-
-# Android related
-relo/**/android/**/gradle-wrapper.jar
-relo/.gradle/
-relo/**/android/captures/
-relo/**/android/gradlew
-relo/**/android/gradlew.bat
-relo/**/android/local.properties
-relo/**/android/**/GeneratedPluginRegistrant.java
-relo/**/android/key.properties
-relo/*.jks
-
-# iOS/XCode related
-relo/**/ios/**/*.mode1v3
-relo/**/ios/**/*.mode2v3
-relo/**/ios/**/*.moved-aside
-relo/**/ios/**/*.pbxuser
-relo/**/ios/**/*.perspectivev3
-relo/**/ios/**/*sync/
-relo/**/ios/**/.sconsign.dblite
-relo/**/ios/**/.tags*
-relo/**/ios/**/.vagrant/
-relo/**/ios/**/DerivedData/
-relo/**/ios/**/Icon?
-relo/**/ios/**/Pods/
-relo/**/ios/**/.symlinks/
-relo/**/ios/**/profile
-relo/**/ios/**/xcuserdata
-relo/**/ios/.generated/
-relo/**/ios/Flutter/.last_build_id
-relo/**/ios/Flutter/App.framework
-relo/**/ios/Flutter/Flutter.framework
-relo/**/ios/Flutter/Flutter.podspec
-relo/**/ios/Flutter/Generated.xcconfig
-relo/**/ios/Flutter/ephemeral
-relo/**/ios/Flutter/app.flx
-relo/**/ios/Flutter/app.zip
-relo/**/ios/Flutter/flutter_assets/
-relo/**/ios/Flutter/flutter_export_environment.sh
-relo/**/ios/ServiceDefinitions.json
-relo/**/ios/Runner/GeneratedPluginRegistrant.*
-
-# macOS
-relo/**/Flutter/ephemeral/
-relo/**/Pods/
-relo/**/macos/Flutter/GeneratedPluginRegistrant.swift
-relo/**/macos/Flutter/ephemeral
-relo/**/xcuserdata/
-
-# Windows
-relo/**/windows/flutter/generated_plugin_registrant.cc
-relo/**/windows/flutter/generated_plugin_registrant.h
-relo/**/windows/flutter/generated_plugins.cmake
-
-# Linux
-relo/**/linux/flutter/generated_plugin_registrant.cc
-relo/**/linux/flutter/generated_plugin_registrant.h
-relo/**/linux/flutter/generated_plugins.cmake
-
-# Coverage
-relo/coverage/
-
-# Symbols
-relo/app.*.symbols
-
-# Exceptions to above rules.
-!relo/**/ios/**/default.mode1v3
-!relo/**/ios/**/default.mode2v3
-!relo/**/ios/**/default.pbxuser
-!relo/**/ios/**/default.perspectivev3
-!relo//packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-!relo//dev/ci/**/Gemfile.lock
+# Python virtual environment
+/api/venv/
