API phiển bản 1.0.1

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,6 @@
 MONGO_URI=mongodb+srv://anly1704_db_user:anly1704_db_user123@aresu-lab.zlldgid.mongodb.net/
+
+# Cấu hình JWT
+SECRET_KEY="a_very_secret_key"
+ALGORITHM="HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES=120  # 120 phút
