--- a/relo/pubspec.yaml
+++ b/relo/pubspec.yaml
@@ -14,6 +14,15 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  http: ^1.5.0
+  fluttertoast: ^9.0.0
+  firebase_core: ^3.3.0
+  firebase_messaging: ^15.0.0
+  convex_bottom_bar: ^3.2.0
+  font_awesome_flutter: ^10.7.0
+  shared_preferences: ^2.2.3
+
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +31,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.1
+  
 
 flutter:
 
