--- a/api/.env
+++ b/api/.env
@@ -4,3 +4,4 @@ MONGO_URI=mongodb+srv://anly1704_db_user:anly1704_db_user123@aresu-lab.zlldgid.m
 SECRET_KEY="a_very_secret_key"
 ALGORITHM="HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES=120  # 120 phút
+REFRESH_TOKEN_EXPIRE_DAYS=1000  # 1000 ngày
