--- a/relo/pubspec.yaml
+++ b/relo/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
   dio: ^5.4.1 # For advanced HTTP requests and interceptors
   sqflite: ^2.0.0+4
   path: ^1.8.3
-
+  connectivity_plus: ^4.0.1
   web_socket_channel: ^2.4.0
+  uuid: ^4.4.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -37,7 +39,6 @@ dev_dependencies:
   flutter_native_splash: ^2.4.1
   build_runner: ^2.4.6
   json_serializable: ^6.7.0
-  json_annotation: ^4.9.0
   
 flutter:
 
