--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,9 @@
 
 /api/.env
 
-__pycache__/
+api/src/models/__pycache__/
+api/src/services/__pycache__/
+api/src/routers/__pycache__/
+api/src/schemas/__pycache__/
+api/src/__pycache__/
 *.pyc
