Api cập nhật người dùng và thêm bài viết

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,7 +2,6 @@ fastapi
 uvicorn
 pymongo
 python-dotenv
-passlib[bcrypt]
 python-jose[cryptography]
 pydantic
 email-validator
@@ -11,3 +10,5 @@ beanie
 motor
 passlib>=1.7.4
 bcrypt==3.2.2
+passlib[bcrypt]
+cloudinary
