--- a/api/.env
+++ b/api/.env
@@ -5,3 +5,8 @@ SECRET_KEY="a_very_secret_key"
 ALGORITHM="HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES=120  # 120 phút
 REFRESH_TOKEN_EXPIRE_DAYS=1000  # 1000 ngày
+
+# Cloudiary configuration
+CLOUDINARY_CLOUD_NAME=dmlrwccth
+CLOUDINARY_API_KEY=758964417471325
+CLOUDINARY_API_SECRET=1pUwz7fiGeSjVgmvkpVAnnZzJXc
