--- a/relo/pubspec.yaml
+++ b/relo/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   web_socket_channel: ^2.4.0
   uuid: ^4.4.0
   intl: ^0.19.0
+  flutter_sound: ^9.2.13
+  path_provider: ^2.1.3
+  permission_handler: ^11.3.1
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   flutter_test:
