--- a/relo/pubspec.yaml
+++ b/relo/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   uuid: ^4.4.0
   intl: ^0.19.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
