--- a/relo/pubspec.yaml
+++ b/relo/pubspec.yaml
@@ -30,6 +30,13 @@ dependencies:
   uuid: ^4.4.0
   intl: ^0.19.0
   image_picker: ^1.0.7
+  cached_network_image: ^3.3.1
+  pull_to_refresh: ^2.0.0
+  shimmer: ^3.0.0
+  photo_view: ^0.14.0
+  qr_flutter: ^4.1.0
+  flutter_animate: ^4.5.0
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
