--- a/relo/pubspec.yaml
+++ b/relo/pubspec.yaml
@@ -33,10 +33,15 @@ dependencies:
   cached_network_image: ^3.3.1
   pull_to_refresh: ^2.0.0
   shimmer: ^3.0.0
-  photo_view: ^0.14.0
+  photo_view: ^0.15.0
   qr_flutter: ^4.1.0
   flutter_animate: ^4.5.0
   permission_handler: ^11.3.0
+  audioplayers: ^6.0.0
+  flutter_local_notifications: ^17.1.2
+  timeago: ^3.6.1
+  animations: ^2.0.11
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
