--- a/relo/pubspec.yaml
+++ b/relo/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   extended_image: ^8.2.1
   camera: ^0.10.6
   video_thumbnail: ^0.5.0
+  filesize: ^2.0.1
 
 dev_dependencies:
   flutter_test:
