--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,17 @@ api/src/routers/__pycache__/
 api/src/schemas/__pycache__/
 api/src/__pycache__/
 *.pyc
+
+.idea/
+.vscode/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+.env.production
+.env.development.local
+.env.test.local
+.env.production.local
